# Hangman

./: .gitignore
.github/workflows/: deploy-frontend.yml  deploy.yml
backend/: .gitignore  CMakeLists.txt
backend/include/: databaseService.h  gameController.h  hangman.h  main.h  minisocket.hpp  player.h
backend/src/: databaseService.cpp  gameController.cpp  hangman.cpp  main.cpp
frontend/: .gitignore  index.html  package.json
frontend/config/: config.local.json  config.prod.json
frontend/src/: script.ts  types.ts
frontend/styles/: styles.css
